--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "16.14.0"
+  },
   "dependencies": {
     "body-parser": "^1.19.2",
     "dotenv": "^16.0.0",
