--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node Backend/server.js",
     "server": "nodemon Backend/server.js",
     "build": "cd Frontend && npm install && npm run build",
-    "deploy": "cd Frontend && npm run deploy"
+    "deploy": "cd Frontend && npm install && npm run deploy"
   },
   "author": "",
   "license": "ISC",
