--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
+  "homepage": "https://akhilanil17.github.io/DawatRestuarant/",
   "name": "dawat",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "node Backend/server.js",
     "server": "nodemon Backend/server.js",
-    "build": "cd Frontend && npm install && npm run build",
-    "deploy": "cd Frontend && npm install && npm run deploy"
+    "build": "cd Frontend && npm install && npm run build"
   },
   "author": "",
   "license": "ISC",
@@ -24,6 +26,7 @@
     "path": "^0.12.7"
   },
   "devDependencies": {
+    "gh-pages": "^3.2.3",
     "nodemon": "^2.0.15"
   }
 }
