--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "server.js",
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d Frontend/build",
     "start": "node Backend/server.js",
     "server": "nodemon Backend/server.js",
     "build": "cd Frontend && npm install && npm run build"
